k8s/smoke-test/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-cd-smoke-app
  namespace: ci-cd-test
  labels:
    app: ci-cd-smoke-app
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ci-cd-smoke-app
  template:
    metadata:
      labels:
        app: ci-cd-smoke-app
    spec:
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 10101
        runAsGroup: 10101
        fsGroup: 10101
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged@sha256:458ecbec226a23120713b35945bcdf0d6e4ea5bbec60c149ce1deca5d264071b
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10101
            runAsGroup: 10101
            capabilities:
              drop:
                - ALL

          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

          volumeMounts:
            - name: nginx-tmp
              mountPath: /tmp

      volumes:
        - name: nginx-tmp
          emptyDir: {}
