k8s/smoke-test/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-smoke-service
  namespace: ci-cd-test
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  selector:
    app: ci-cd-smoke-app
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
      protocol: TCP
