k8s/smoke-test/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ci-cd-smoke-app-policy
  namespace: ci-cd-test
spec:
  podSelector:
    matchLabels:
      app: ci-cd-smoke-app

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080

  egress: []
